Fix auto dropdown on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -38,9 +38,12 @@ body {
     padding-top: 80px;
 }
 
-/* display dropdown menu when mouse hover */
-.navbar-nav > li:hover .dropdown-menu {
-    display: block;
+/* display dropdown menu when hovering */
+@media only screen and (min-width: 800px) {
+    /* for desktop */
+    .navbar-nav > li:hover .dropdown-menu {
+        display: block;
+    }
 }
 
 /* announcement */
@@ -51,7 +54,7 @@ body {
     z-index: 100;
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 800px) {
     /* for small screen */
     .alert {
         font-size: 12px;
